@@ -4,6 +4,7 @@ For more details, please see https://hg.python.org/jython
 
 Jython 2.7.1rc1
   Bugs fixed
+    - [ PR55 ] Replace deprecated use of ASCII constant with ascii()
     - [ 1777 ] Help getting SymPy working with Jython
     - [ 2475 ] Backported python 3 pathlib and pathlib2 do not work b/c of meta class issues
     - [ 2551 ] __slots__ in diamond-style causes lay-out conflict (breaks pathlib and sympy)
